Maam's graph on lab pc

--- a/KibanaDataFetch/data_preprocessing_panorama.ipynb
+++ b/KibanaDataFetch/data_preprocessing_panorama.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,16 +123,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ARCH:  0 /home/tzed/Research/pegasus_tutorial/KibanaDataFetch/\n",
-      "IND:  0 /home/tzed/Research/pegasus_tutorial/KibanaDataFetch/KickSmaple.xlsx\n",
-      "{0: ['/home/tzed/Research/pegasus_tutorial/KibanaDataFetch/KickSmaple.xlsx']}\n"
+      "ARCH:  0 /home/mohammad/pegasus_tutorial/KibanaDataFetch/\n",
+      "IND:  0 /home/mohammad/pegasus_tutorial/KibanaDataFetch/kickSampleNamd.xlsx\n",
+      "{0: ['/home/mohammad/pegasus_tutorial/KibanaDataFetch/kickSampleNamd.xlsx']}\n"
      ]
     }
    ],
@@ -140,9 +140,9 @@
     "model_name = 'kickstart'\n",
     "opt = '1000genome'\n",
     "filelist=[\n",
-    "    'KickSmaple.xlsx'\n",
+    "    'kickSampleNamd.xlsx'\n",
     "]\n",
-    "dirname = '/home/tzed/Research/pegasus_tutorial/KibanaDataFetch'\n",
+    "dirname = '/home/mohammad/pegasus_tutorial/KibanaDataFetch'\n",
     "# workloads, output_prefix = read_input_manual4('/Users/tanzima/Research/AMD/DATA/mi-50/DATA-aac-july21/gd/prof/', 'basic_lstm', \"gd\", filelist)\n",
     "workloads, output_prefix = read_input_manual4(dirname, model_name, opt, filelist)\n",
     "\n",
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -226,27 +226,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
-     "ename": "ParserError",
-     "evalue": "Error tokenizing data. C error: Expected 1 fields in line 6, saw 2\n",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mParserError\u001b[0m                               Traceback (most recent call last)",
-      "\u001b[0;32m/tmp/ipykernel_8503/3518108542.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     10\u001b[0m             \u001b[0;32mcontinue\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     11\u001b[0m         \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 12\u001b[0;31m             \u001b[0mdf_original2\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mread_csv\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfname\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     13\u001b[0m \u001b[0;31m#             print(df_original2['@timestamp'],df_original2['ts'] )\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     14\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/usr/lib/python3/dist-packages/pandas/io/parsers.py\u001b[0m in \u001b[0;36mparser_f\u001b[0;34m(filepath_or_buffer, sep, delimiter, header, names, index_col, usecols, squeeze, prefix, mangle_dupe_cols, dtype, engine, converters, true_values, false_values, skipinitialspace, skiprows, skipfooter, nrows, na_values, keep_default_na, na_filter, verbose, skip_blank_lines, parse_dates, infer_datetime_format, keep_date_col, date_parser, dayfirst, cache_dates, iterator, chunksize, compression, thousands, decimal, lineterminator, quotechar, quoting, doublequote, escapechar, comment, encoding, dialect, error_bad_lines, warn_bad_lines, delim_whitespace, low_memory, memory_map, float_precision)\u001b[0m\n\u001b[1;32m    683\u001b[0m         )\n\u001b[1;32m    684\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 685\u001b[0;31m         \u001b[0;32mreturn\u001b[0m \u001b[0m_read\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfilepath_or_buffer\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mkwds\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    686\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    687\u001b[0m     \u001b[0mparser_f\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m__name__\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mname\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/usr/lib/python3/dist-packages/pandas/io/parsers.py\u001b[0m in \u001b[0;36m_read\u001b[0;34m(filepath_or_buffer, kwds)\u001b[0m\n\u001b[1;32m    461\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    462\u001b[0m     \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 463\u001b[0;31m         \u001b[0mdata\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mparser\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mread\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnrows\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    464\u001b[0m     \u001b[0;32mfinally\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    465\u001b[0m         \u001b[0mparser\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mclose\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/usr/lib/python3/dist-packages/pandas/io/parsers.py\u001b[0m in \u001b[0;36mread\u001b[0;34m(self, nrows)\u001b[0m\n\u001b[1;32m   1152\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0mread\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnrows\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mNone\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1153\u001b[0m         \u001b[0mnrows\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0m_validate_integer\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"nrows\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnrows\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1154\u001b[0;31m         \u001b[0mret\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_engine\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mread\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnrows\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1155\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1156\u001b[0m         \u001b[0;31m# May alter columns / col_dict\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/usr/lib/python3/dist-packages/pandas/io/parsers.py\u001b[0m in \u001b[0;36mread\u001b[0;34m(self, nrows)\u001b[0m\n\u001b[1;32m   2057\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0mread\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnrows\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mNone\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2058\u001b[0m         \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 2059\u001b[0;31m             \u001b[0mdata\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_reader\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mread\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnrows\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   2060\u001b[0m         \u001b[0;32mexcept\u001b[0m \u001b[0mStopIteration\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2061\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_first_chunk\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32mpandas/_libs/parsers.pyx\u001b[0m in \u001b[0;36mpandas._libs.parsers.TextReader.read\u001b[0;34m()\u001b[0m\n",
-      "\u001b[0;32mpandas/_libs/parsers.pyx\u001b[0m in \u001b[0;36mpandas._libs.parsers.TextReader._read_low_memory\u001b[0;34m()\u001b[0m\n",
-      "\u001b[0;32mpandas/_libs/parsers.pyx\u001b[0m in \u001b[0;36mpandas._libs.parsers.TextReader._read_rows\u001b[0;34m()\u001b[0m\n",
-      "\u001b[0;32mpandas/_libs/parsers.pyx\u001b[0m in \u001b[0;36mpandas._libs.parsers.TextReader._tokenize_rows\u001b[0;34m()\u001b[0m\n",
-      "\u001b[0;32mpandas/_libs/parsers.pyx\u001b[0m in \u001b[0;36mpandas._libs.parsers.raise_parser_error\u001b[0;34m()\u001b[0m\n",
-      "\u001b[0;31mParserError\u001b[0m: Error tokenizing data. C error: Expected 1 fields in line 6, saw 2\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "---------- Index(['Unnamed: 0', 'dag_job_id', 'pid', 'vm', '@version', 'rank', 'bsend',\n",
+      "       'site', 'syscw', 'type', 'wf_label', 'bwrite', 'exe', 'rchar',\n",
+      "       'threads', 'utime', 'syscr', '@timestamp', 'xformation', 'wf_uuid',\n",
+      "       'task_id', 'hostname', 'brecv', 'procs', 'event', 'iowait', 'wchar',\n",
+      "       'bread', 'ts', 'stime', 'condor_job_id', 'rss', 'tsTrans', 'vmTrans',\n",
+      "       'bwriteT', 'utimeT', 'stimeT', 'iowaitT'],\n",
+      "      dtype='object')\n",
+      "----------\n",
+      "Index(['Unnamed: 0', 'pid', 'vm', 'bsend', 'syscw', 'bwrite', 'rchar', 'utime',\n",
+      "       'syscr', 'brecv', 'iowait', 'wchar', 'bread', 'ts', 'stime', 'vmTrans',\n",
+      "       'bwriteT', 'utimeT', 'stimeT', 'iowaitT', 'vmPerSec'],\n",
+      "      dtype='object')\n",
+      "1\n",
+      "{0:       Unnamed: 0      pid        vm  bsend    syscw    bwrite      rchar  \\\n",
+      "2            2.0  30307.0  541912.0    0.0     25.0  192512.0   181310.0   \n",
+      "39          39.0  30310.0  541776.0    0.0     22.0  163840.0   185446.0   \n",
+      "3            3.0  28406.0  543940.0    0.0    110.0  229376.0   182510.0   \n",
+      "21          21.0  30311.0  541776.0    0.0     22.0  167936.0   185445.0   \n",
+      "40          40.0  30312.0  541776.0    0.0     22.0  172032.0   185446.0   \n",
+      "...          ...      ...       ...    ...      ...       ...        ...   \n",
+      "2223      2223.0   1890.0  688040.0    0.0  11609.0  188416.0  2174308.0   \n",
+      "2319      2319.0   1888.0  688080.0    0.0  11405.0  188416.0  2156640.0   \n",
+      "2320         0.0      0.0       0.0    0.0      0.0       0.0        0.0   \n",
+      "2321         0.0      0.0       0.0    0.0      0.0       0.0        0.0   \n",
+      "2322         0.0      0.0       0.0    0.0      0.0       0.0        0.0   \n",
+      "\n",
+      "      utime    syscr  brecv  ...      wchar       bread            ts  stime  \\\n",
+      "2      6.11    244.0    0.0  ...     9594.0    704512.0  1.533783e+09   3.85   \n",
+      "39     5.96    264.0    0.0  ...     1314.0    303104.0  1.533783e+09   4.00   \n",
+      "3      9.95    239.0    0.0  ...    17596.0    421888.0  1.533783e+09   0.02   \n",
+      "21     6.04    263.0    0.0  ...     1314.0    573440.0  1.533783e+09   3.92   \n",
+      "40     6.11    261.0    0.0  ...     1314.0      8192.0  1.533783e+09   3.83   \n",
+      "...     ...      ...    ...  ...        ...         ...           ...    ...   \n",
+      "2223  28.08  11704.0    0.0  ...  3237255.0   2957312.0  1.533785e+09   1.37   \n",
+      "2319  28.00  11698.0    0.0  ...  1426492.0  12070912.0  1.533785e+09   1.37   \n",
+      "2320   0.00      0.0    0.0  ...        0.0         0.0  0.000000e+00   0.00   \n",
+      "2321   0.00      0.0    0.0  ...        0.0         0.0  0.000000e+00   0.00   \n",
+      "2322   0.00      0.0    0.0  ...        0.0         0.0  0.000000e+00   0.00   \n",
+      "\n",
+      "       vmTrans   bwriteT    utimeT    stimeT   iowaitT    vmPerSec  \n",
+      "2     0.000818  0.002843  0.003516  0.007241  0.000000    0.000000  \n",
+      "39    0.000000  0.000000  0.003237  0.007525  0.000000    0.000000  \n",
+      "3     0.013011  0.006499  0.010660  0.000000  0.000000    0.000000  \n",
+      "21    0.000000  0.000406  0.003386  0.007374  0.000000    0.000000  \n",
+      "40    0.000000  0.000812  0.003516  0.007204  0.000000    0.000000  \n",
+      "...        ...       ...       ...       ...       ...         ...  \n",
+      "2223  0.879413  0.002437  0.044388  0.002552  0.010161  372.921409  \n",
+      "2319  0.879654  0.002437  0.044239  0.002552  0.010603  372.943089  \n",
+      "2320  0.000000  0.000000  0.000000  0.000000  0.000000    0.000000  \n",
+      "2321  0.000000  0.000000  0.000000  0.000000  0.000000    0.000000  \n",
+      "2322  0.000000  0.000000  0.000000  0.000000  0.000000    0.000000  \n",
+      "\n",
+      "[2323 rows x 21 columns]}\n"
      ]
     }
    ],
@@ -254,7 +293,7 @@
     "## Reading and saving input\n",
     "df_dict_input = {}\n",
     "total_file_count = 0\n",
-    "filter_list = ['index', 'dag_job_id', '@version', 'wf_label','rss', 'site', 'type', 'condor_job_id','exe', 'hostname', 'task_id', 'xformation', 'wf_uuid']\n",
+    "filter_list = ['dag_job_id', '@version', 'wf_label','rss', 'site', 'type', 'condor_job_id','exe', 'hostname', 'task_id', 'xformation', 'wf_uuid']\n",
     "for ind in range(len(workloads)):\n",
     "    file_name_list = workloads[ind]\n",
     "    for fname in file_name_list:\n",
@@ -275,7 +314,7 @@
     "#             newdf['utimeTRatio'] = newdf['utimeT'] / newdf['stimeT']\n",
     "\n",
     "#             newdf['bwritePerT'] = newdf['bwrite'] / newdf['bwriteT']\n",
-    "            newdf['vmTransPerSec'] = newdf['vmTrans'] / newdf['tsTrans']\n",
+    "            newdf['vmPerSec'] = newdf['vm'] / newdf['tsTrans']\n",
     "#             newdf['iowaitPerT'] = newdf['iowait'] / newdf['iowaitT']\n",
     "            newdf = newdf.drop(filter_list, axis=1)\n",
     "            newdf = newdf.loc[:, (newdf != 0).any(axis=0)]\n",
@@ -299,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -309,7 +348,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "\u001b[0;32m/tmp/ipykernel_8503/249367527.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mcopy\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;31m# import plotly.express as px\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mtmpdf\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcopy\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdeepcopy\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdf_dict_input\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m \u001b[0;31m# # tmpdf['bwritePerT'] = tmpdf['bwrite'] / tmpdf['bwriteT']\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;31m# # tmpdf['breadPerT'] = tmpdf['bread'] / tmpdf['breadT']\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/tmp/ipykernel_575454/249367527.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mcopy\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;31m# import plotly.express as px\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mtmpdf\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcopy\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdeepcopy\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdf_dict_input\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m \u001b[0;31m# # tmpdf['bwritePerT'] = tmpdf['bwrite'] / tmpdf['bwriteT']\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;31m# # tmpdf['breadPerT'] = tmpdf['bread'] / tmpdf['breadT']\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;31mKeyError\u001b[0m: 1"
      ]
     }
@@ -317,7 +356,7 @@
    "source": [
     "import copy\n",
     "# import plotly.express as px\n",
-    "tmpdf = copy.deepcopy(df_dict_input[1])\n",
+    "tmpdf = copy.deepcopy(df_dict_input[0])\n",
     "# # tmpdf['bwritePerT'] = tmpdf['bwrite'] / tmpdf['bwriteT']\n",
     "# # tmpdf['breadPerT'] = tmpdf['bread'] / tmpdf['breadT']\n",
     "\n",
